<resources>
    <string name="app_name">Signify</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="login_now">click to login</string>
    <string name="register_now">click to register</string>
    <string name="logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="birthdate"></string>
    <string name="city">City</string>
    <string name="my_account">My Account</string>
    <string name="help_and_support">Help and Support</string>
    <string name="about_app">About App</string>
    <string name="app_logo" />
    <string name="signify">SIGNIFY</string>
    <string name="material_title">Material Title</string>
    <string name="description_of_the_material">Description of the material.</string>
    <string name="mark_as_completed">Completed</string>
    <string name="mark_as_not_completed">Not Completed</string>

    <string name="remember_me">Remember me</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="asl_aid">Sign Language Learning and Communication Aid</string>
    <string name="video">Video</string>
    <string name="beginner_lessons">Beginner | 6 Lessons</string>
    <string name="learn_basic">Learn basic A-F</string>
    <string name="material_image">Material Image</string>
    <string name="mark_as_completed_btn">Mark as Completed</string>
    <string name="profile_image">Profile Image</string>
    <string name="name_placeholder" />
    <string name="quiz">Quiz</string>
    <string name="btnOnboardingStart">Start Now</string>
    <string name="back_button" />
    <string name="update_profile">Update profile</string>
    <string name="add_image_icon" />
    <string name="quiz_title">Quiz Title</string>
    <string name="play_quiz" />
    <string name="forward_arrow">forward_arrow</string>
    <string name="material">Material</string>

    <string name="greeting">Hello,\n%s</string>
    <string name="default_username">User</string>
    <string name="default_email">Email not available</string>
    <string name="progress">Progress</string>
    <string name="your_lessons_progress">Your Lessons Progress</string>
    <string name="your_quiz_progress">Your Quiz Progress</string>
    <string name="progress_value">%1$d/%2$d</string>
    <string name="error_fetch_progress">Failed to fetch progress data.</string>
    <string name="google_login">Google</string>
    <string name="dont_have_account">dont have account?</string>
    <string name="or">or</string>
    <string name="search">Search...</string>
    <string name="learn">Learn by answering this quiz</string>
    <string name="camera">Camera</string>
    <string name="alamat_email">Alamat Email</string>
    <string name="nama">Nama</string>
    <string name="sudah_memiliki_akun">Sudah memiliki akun?</string>
    <string name="splash">splash</string>
    <string name="signify_app_revolutionizing_mobile_applications_with_cutting_edge_technologies">Signify App: Revolutionizing mobile applications with cutting-edge technologies.</string>
    <string name="version_1_0_0">Version: 1.0.0</string>
    <string name="meet_the_team">Meet the Team</string>
    <string name="if_you_have_any_questions_or_need_assistance_please_contact_support">If you have any questions or need assistance, please contact support.</string>
    <string name="contact_support_a195b4ky4107_bangkit_academy">Contact Support: a195b4ky4107@bangkit.academy</string>
    <string name="whatsapp_0895335191326">WhatsApp: 0895335191326</string>
    <string name="faq_visit_our_website_for_frequently_asked_questions">FAQ: Visit our website for frequently asked questions.</string>
    <string name="hello_user">Hello, User</string>
    <string name="email_not_available">Email not available</string>
    <string name="scan_and_communicate_with_other">Scan and Communicate with other</string>
    <string name="your_progress">Your Progress</string>
    <string name="lessons">Lessons</string>
    <string name="_0_4">0/4</string>
    <string name="latest_news">Latest News</string>
    <string name="dd_mm_yyyy">dd/mm/yyyy</string>
    <string name="make_changes_to_your_account">Make changes to your account</string>
    <string name="log_out">Log out</string>
    <string name="further_secure_your_account_for_safety">Further secure your account for safety</string>
    <string name="question_goes_here">Question goes here</string>
    <string name="option_a">Option A</string>
    <string name="option_b">Option B</string>
    <string name="option_c">Option C</string>
    <string name="option_d">Option D</string>
    <string name="submit">Submit</string>
    <string name="correct">Correct!</string>
    <string name="incorrect">Incorrect!</string>
    <string name="take_a_quiz_and_learn">Take a quiz and learn!</string>
    <string name="lesson_1">LESSON 1</string>
    <string name="in_the_lessons_we_learn_new_words_and_vocabularies">In the lessons we learn new words and vocabularies</string>
    <string name="completed">Completed</string>
    <string name="image">image</string>
    <string name="see_more">See More</string>


</resources>