<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="?attr/backgroundColor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginTop="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingBottom="16dp">

            <ImageView
                android:id="@+id/btnBack"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_back_arrow"
                android:contentDescription="@string/back_button"
                android:layout_marginEnd="12dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_account"
                android:textSize="22sp"
                android:fontFamily="@font/poppins_bold"
                android:textColor="?attr/colorOnSurface" />
        </LinearLayout>

        <!-- Profile Image Section -->
        <FrameLayout
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginBottom="16dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/profileImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/default_profile_image"
                android:scaleType="centerCrop"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.Circle"
                android:contentDescription="@string/profile_image" />

            <ImageView
                android:id="@+id/btnAddImage"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/ic_add_circle"
                android:layout_gravity="bottom|end"
                android:layout_margin="8dp"
                android:background="@drawable/btn_circle_background"
                android:contentDescription="@string/add_image_icon" />


        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/bgBlue"
                android:layout_marginBottom="12dp">

                <com.example.mycapstone.customview.NameEditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:fontFamily="@font/poppins_regular" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/bgBlue"
                android:layout_marginBottom="12dp">

                <com.example.mycapstone.customview.EmailEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:textColor="@color/black"
                    android:fontFamily="@font/poppins_regular" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Phone -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/bgBlue"
                android:layout_marginBottom="12dp">

                <com.example.mycapstone.customview.PhoneEditText
                    android:id="@+id/etPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone"
                    android:fontFamily="@font/poppins_regular"
                    android:textColor="@color/black"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/birthdate"
                app:boxStrokeColor="@color/bgBlue"
                android:layout_marginBottom="12dp">

                <com.example.mycapstone.customview.BirthdateEditText                    android:id="@+id/etBirthdate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:textColor="@color/black"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- City -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/city"
                app:boxStrokeColor="@color/bgBlue"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginBottom="12dp">

                <com.example.mycapstone.customview.CityEditText
                    android:id="@+id/etCity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <!-- Update Button -->
        <Button
            android:id="@+id/btnUpdateProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_profile"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/btn_rounded_background"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_bold"
            android:elevation="4dp" />
    </LinearLayout>
</ScrollView>
