<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="@drawable/rounded_frame_white"
    android:padding="16dp">

    <!-- Image Section -->
    <ImageView
        android:id="@+id/item_image"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/logosignify"
        android:contentDescription="@string/material_image"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginEnd="10dp"
        android:background="@drawable/circle_background" />

    <!-- Title Text -->
    <TextView
        android:id="@+id/item_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/learn_basic"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/item_image"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="10dp" />

    <!-- Subtitle/Description -->
    <TextView
        android:id="@+id/item_subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/beginner_lessons"
        android:textSize="12sp"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@id/item_title"
        app:layout_constraintStart_toEndOf="@id/item_image"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="10dp" />

    <!-- Mark as Completed Button -->
    <Button
        android:id="@+id/mark_as_completed_button"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:backgroundTint="@color/bgBlue"
        android:drawablePadding="8dp"
        android:text="@string/mark_as_completed"
        android:textColor="@android:color/white"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/item_image" />

</androidx.constraintlayout.widget.ConstraintLayout>
